# server/controller/infoCtn.go
@@ -34,8 +34,8 @@ func (cnt *InfoCtn) RegisterEndpoints(router *gin.RouterGroup) {
 //	@Summary		Get server info
 //	@Description	return information about the server build, version, etc ...
 //	@Tags			info
-//	@Produce		image/png
-//	@Success		200	{struct}	dto.ServerInfoDto	"Information about server"
+//	@Produce		json
+//	@Success		200	{object}	dto.ServerInfoDto	"Information about server"
 //	@Router			/info [get]
 func (ctn *InfoCtn) getServerInfo(c *gin.Context) {
 	serverInfo := dto.ServerInfoDto{
